@@ -5,15 +5,19 @@ module ActionView #:nodoc:
     attr_accessor :locals
     attr_reader :handler, :path, :extension, :filename, :method
 
-    def initialize(view, path, use_full_path, locals = {})
+    def initialize(view, path, use_full_path = nil, locals = {})
+      unless use_full_path == nil
+        ActiveSupport::Deprecation.warn("use_full_path option has been deprecated and has no affect.", caller)
+      end
+
       @view = view
       @paths = view.view_paths
 
       @original_path = path
-      @path = TemplateFile.from_path(path, !use_full_path)
+      @path = TemplateFile.from_path(path)
       @view.first_render ||= @path.to_s
       @source = nil # Don't read the source until we know that it is required
-      set_extension_and_file_name(use_full_path)
+      set_extension_and_file_name
 
       @locals = locals || {}
       @handler = self.class.handler_class_for_extension(@extension).new(@view)
@@ -63,25 +67,24 @@ module ActionView #:nodoc:
     end
 
     private
-      def set_extension_and_file_name(use_full_path)
+      def set_extension_and_file_name
         @extension = @path.extension
 
-        if use_full_path
-          unless @extension
-            @path = @view.send(:template_file_from_name, @path)
-            raise_missing_template_exception unless @path
-            @extension = @path.extension
-          end
-
-          if @path = @paths.find_template_file_for_path(path)
-            @filename = @path.full_path
-            @extension = @path.extension
-          end
-        else
-          @filename = @path.full_path
+        unless @extension
+          @path = @view.send(:template_file_from_name, @path)
+          raise_missing_template_exception unless @path
+          @extension = @path.extension
         end
 
-        raise_missing_template_exception if @filename.blank?
+        if p = @paths.find_template_file_for_path(path)
+          @path = p
+          @filename = @path.full_path
+          @extension = @path.extension
+          raise_missing_template_exception if @filename.blank?
+        else
+          @filename = @original_path
+          raise_missing_template_exception unless File.exist?(@filename)
+        end
       end
 
       def raise_missing_template_exception
